[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project]
name = "llm-archive"
version = "0.1.0"
description = "Dump and sync AI conversations from multiple sources into a local SQLite database"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "rich>=13.0",
    "playwright>=1.40",
]


[project.scripts]
llm-archive = "llm_archive.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["llm_archive"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
